logs/xrenner.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xrenner'...
Listing './lib/python3.5/site-packages/xrenner/licenses'...
Listing './lib/python3.5/site-packages/xrenner/models'...
Listing './lib/python3.5/site-packages/xrenner/modules'...
Compiling './lib/python3.5/site-packages/xrenner/modules/depedit.py'...
***   File "./lib/python3.5/site-packages/xrenner/modules/depedit.py", line 618
    print output_trees
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xrenner/modules/xrenner_test.py'...
***   File "./lib/python3.5/site-packages/xrenner/modules/xrenner_test.py", line 75
    print "\nxrenner unit tests\n" + "=" * 20 + "\nReading test cases from test/tests.dat"
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xrenner/test'...
Compiling './lib/python3.5/site-packages/xrenner/xrenner.py'...
***   File "./lib/python3.5/site-packages/xrenner/xrenner.py", line 79
    print output
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xrenner-1.4.1.8.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
